--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "my-vue-dashboard",
+  "name": "resonanz-management",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "backend": "cd backend && node server.js"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
+    "axios": "^1.13.2",
     "chart.js": "^4.4.9",
     "tailwindcss": "^4.1.4",
     "vue": "^3.5.13",
-    "vue-chartjs": "^5.3.2"
+    "vue-chartjs": "^5.3.2",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@iconify/vue": "^4.3.0",
