--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.13.2",
     "chart.js": "^4.4.9",
+    "firebase": "^12.6.0",
     "tailwindcss": "^4.1.4",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
