--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "tailwindcss": "^4.1.4",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@iconify/vue": "^4.3.0",
